# Python-IL-STS

./: .gitignore  README.jp.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  sync-to-gitee.yml
docs/: ChangeLOG.md  README.jp.md  README.md  query_write_example.py  requirements.txt
santec/: __init__.py  mpm_instrument_class.py  sts_process.py  tsl_instrument_class.py
santec/DLL/: README.md
src/: main.py
src/santec/: __init__.py  error_handling_class.py  file_saving.py  get_address.py  mpm_instrument_class.py  sts_process.py  sts_process_2.py  tsl_instrument_class.py
src/santec/DLL/: README.jp.md  README.md
