[project]
name = "santec-il-sts"
version = "2.8.8"
description = "Program to measure Insertion Loss using the Santec's Swept Test System. "
authors = [{ name = "Santec Corporation" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "PyVISA>=1.14.1,<1.15.0",
    "nidaqmx>=1.0.2,<1.1.0",
    "numpy>=2.2.1,<2.3.0",
    "matplotlib>=3.10.0,<3.11.0",
    "pythonnet>=3.0.5,<3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/santec"]

[tool.hatch.build]
exclude = ["src/santec/DLL/README.md"]
